--- a/css/main.css
+++ b/css/main.css
@@ -2,24 +2,81 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	overflow: scroll;
+	border: 1px solid black;
 }
 
 body {
-	.
+	background-image: url("../images/background.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: contain;
+}
+
+li {
+	display: inline-block;
+	padding: 0 10px;
+}
+
+/* Divs and whatnot */
+
+.body {
+	background: rgba(230, 230, 230, 0.9);
 }
 
 .header {
-	.
+	height:	50px;
+	width: 100%;
 }
 
 .logo {
-	.
+	width: 20%;
+	height: 100%;
+	float: left;
+}
+
+.headerlistbox {
+	width: 80%;
+	float: right;
+	margin: 10px 0;
 }
 
 .headerlist {
-	.
+	width: 600px;
+}
+
+.main {
+	height: 3000px;
+	width: 100%;
+}
+
+.about {
+	/*height: 800px;*/
+}
+
+.abouttext {
+	width: 70%;
+	height: 100%;
+	float: left;
+
+}
+
+.aboutpic {
+	width: 30%;
+	float: right;
+
+}
+
+.aboutpicimg {
+	width: 100%;
 }
 
 .footer {
-	.
+	height: 50px;
+}
+
+/* Generic classes */
+
+.inlineblock {
+	display: inline-block;
 }
