--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
+/*hsl(199, 70%, 20%)*/
+
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 	overflow: scroll;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 }
 
 body {
@@ -15,7 +17,20 @@ body {
 
 li {
 	display: inline-block;
-	padding: 0 10px;
+	padding: 0 4%;
+}
+
+h1 {
+	text-align: center;
+	color: white;
+	/*-webkit-text-fill-color: white;
+	-webkit-text-stroke-width: 2px;
+	-webkit-text-stroke-color: black;*/
+}
+
+h2 {
+	text-align: center;
+	padding: 10px 0;
 }
 
 /* Divs and whatnot */
@@ -25,24 +40,29 @@ li {
 }
 
 .header {
-	height:	50px;
+	height:	40px;
 	width: 100%;
+	background-color: hsl(199, 70%, 20%);
+	border-width: 2px 0px;
+	border-style: solid;
+	border-color: black;
+	min-width: 920px;
 }
 
 .logo {
-	width: 20%;
+	width: 30%;
 	height: 100%;
 	float: left;
 }
 
 .headerlistbox {
-	width: 80%;
+	width: 70%;
 	float: right;
 	margin: 10px 0;
 }
 
 .headerlist {
-	width: 600px;
+	/*margin: 0 auto;*/
 }
 
 .main {
@@ -51,32 +71,96 @@ li {
 }
 
 .about {
-	/*height: 800px;*/
+	.
 }
 
 .abouttext {
-	width: 70%;
+	width: 60%;
 	height: 100%;
 	float: left;
 
 }
 
 .aboutpic {
-	width: 30%;
+	width: 40%;
 	float: right;
-
 }
 
 .aboutpicimg {
 	width: 100%;
+	border-width: 0 0 2px 2px;
+	border-style: solid;
+	border-color: black;
+	/*min-width: 274px;
+	min-height: 250px;*/
+}
+
+.education {
+	.
+}
+
+.educationtext{
+	float: right;
+	width: 80%;
+}
+
+.educationimg {
+	float: left;
+	width: 20%;
+	height: 100px;
+	border-width: 2px 2px 2px 0;
+	border-style: solid;
+	border-color: black;
+}
+
+.work {
+	.
+}
+
+.recreational {
+	.
+}
+
+.future {
+	.
 }
 
 .footer {
-	height: 50px;
+	height: 100px;
+	width: 100%;
+	background-color: hsl(199, 70%, 20%);
+	border-width: 2px 0px;
+	border-style: solid;
+	border-color: black;
+	padding: 30px 30%;
 }
 
 /* Generic classes */
 
 .inlineblock {
 	display: inline-block;
+}
+
+.whitetext {
+	color: white;
+}
+
+.font18 {
+	font-size: 18px;
+}
+
+.paddinglr10 {
+	padding: 0 10px;
+}
+
+.padding10 {
+	padding: 10px;
+}
+
+.minwidth400 {
+	min-width: 400px;
+}
+
+.minwidth550 {
+	min-width: 550px;
 }
