--- a/css/main.css
+++ b/css/main.css
@@ -47,12 +47,14 @@ h2 {
 	border-style: solid;
 	border-color: black;
 	min-width: 920px;
+	overflow: hidden;
 }
 
 .logo {
 	width: 30%;
 	height: 100%;
 	float: left;
+	overflow: hidden;
 }
 
 .headerlistbox {
@@ -62,7 +64,7 @@ h2 {
 }
 
 .headerlist {
-	/*margin: 0 auto;*/
+	.
 }
 
 .main {
@@ -143,6 +145,7 @@ h2 {
 	border-style: solid;
 	border-color: black;
 	padding: 30px 35%;
+	overflow: hidden;
 }
 
 /* Generic classes */
